tests/baselines/reference/APISample_watcher.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8515,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8515,40): error TS1005: ';' expected.
typescript_standalone.d.ts(8971,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8971,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9231,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9231,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9581,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9581,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9605,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9605,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9692,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9692,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10857,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10857,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10868,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10868,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10878,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10878,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10953,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10953,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11010,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11010,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11064,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11064,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11084,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11084,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11094,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11094,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11128,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11128,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11131,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11131,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11135,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11135,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11153,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11153,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11179,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11179,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11182,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11182,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11194,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11194,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11224,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11224,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11258,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11258,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11269,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11269,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11301,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11301,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11305,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11305,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11335,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11335,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11378,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11378,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11610,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11610,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11612,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11612,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11614,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11614,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11616,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11616,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11636,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11636,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11638,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11638,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11640,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11640,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11642,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11642,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11714,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11714,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11716,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11716,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11718,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11718,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11759,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11759,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_watcher.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The sample sources can be found
             at: https://github.com/Microsoft/TypeScript/wiki/Using-the-Compiler-API#incremental-build-support-using-the-language-services
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var process: any;
    declare var console: any;
    declare var fs: {
        existsSync(path: string): boolean;
        readdirSync(path: string): string[];
        readFileSync(filename: string, encoding?: string): string;
        writeFileSync(filename: string, data: any, options?: { encoding?: string; mode?: number; flag?: string; } | string): void;
        watchFile(filename: string, options: { persistent?: boolean; interval?: number; }, listener: (curr: { mtime: Date }, prev: { mtime: Date }) => void): void;
    };
    declare var path: any;
    
    import * as ts from "typescript";
    
    function watch(rootFileNames: string[], options: ts.CompilerOptions) {
        const files: ts.MapLike<{ version: number }> = {};
    
        // initialize the list of files
        rootFileNames.forEach(fileName => {
            files[fileName] = { version: 0 };
        });
    
        // Create the language service host to allow the LS to communicate with the host
        const servicesHost: ts.LanguageServiceHost = {
            getScriptFileNames: () => rootFileNames,
            getScriptVersion: (fileName) => files[fileName] && files[fileName].version.toString(),
            getScriptSnapshot: (fileName) => {
                if (!fs.existsSync(fileName)) {
                    return undefined;
                }
    
                return ts.ScriptSnapshot.fromString(fs.readFileSync(fileName).toString());
            },
            getCurrentDirectory: () => process.cwd(),
            getCompilationSettings: () => options,
            getDefaultLibFileName: (options) => ts.getDefaultLibFilePath(options),
        };
    
        // Create the language service files
        const services = ts.createLanguageService(servicesHost, ts.createDocumentRegistry())
    
        // Now let's watch the files
        rootFileNames.forEach(fileName => {
            // First time around, emit all files
            emitFile(fileName);
    
            // Add a watch on the file to handle next change
            fs.watchFile(fileName,
                { persistent: true, interval: 250 },
                (curr, prev) => {
                    // Check timestamp
                    if (+curr.mtime <= +prev.mtime) {
                        return;
                    }
    
                    // Update the version to signal a change in the file
                    files[fileName].version++;
    
                    // write the changes to disk
                    emitFile(fileName);
                });
        });
    
        function emitFile(fileName: string) {
            let output = services.getEmitOutput(fileName);
    
            if (!output.emitSkipped) {
                console.log(`Emitting ${fileName}`);
            }
            else {
                console.log(`Emitting ${fileName} failed`);
                logErrors(fileName);
            }
    
            output.outputFiles.forEach(o => {
                fs.writeFileSync(o.name, o.text, "utf8");
            });
        }
    
        function logErrors(fileName: string) {
            let allDiagnostics = services.getCompilerOptionsDiagnostics()
                .concat(services.getSyntacticDiagnostics(fileName))
                .concat(services.getSemanticDiagnostics(fileName));
    
            allDiagnostics.forEach(diagnostic => {
                let message = ts.flattenDiagnosticMessageText(diagnostic.messageText, "\n");
                if (diagnostic.file) {
                    let { line, character } = diagnostic.file.getLineAndCharacterOfPosition(diagnostic.start!);
                    console.log(`  Error ${diagnostic.file.fileName} (${line + 1},${character + 1}): ${message}`);
                }
                else {
                    console.log(`  Error: ${message}`);
                }
            });
        }
    }
    
    // Initialize files constituting the program as all .ts files in the current directory
    const currentDirectoryFiles = fs.readdirSync(process.cwd()).
        filter(fileName=> fileName.length >= 3 && fileName.substr(fileName.length - 3, 3) === ".ts");
    
    // Start the watcher
    watch(currentDirectoryFiles, { module: ts.ModuleKind.CommonJS });
    